chore: update readme

--- a/src/app/login-popup/login-popup/login-popup.component.html
+++ b/src/app/login-popup/login-popup/login-popup.component.html
@@ -3,7 +3,7 @@
   identifier="loginPopup"
   [closable]="false"
   [escapable]="true"
-  (onAnyCloseEvent)="closeRegisterPopup()"
+  (onAnyCloseEvent)="closePopup()"
 >
   <h2>Login</h2>
   <a (click)="closePopup()"> Close </a>
